--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       - ./qr/mysql:/var/lib/mysql
     expose:
       - 3306
+    ports:
+      - 3306:3306
     networks:
       - comedores
 
