--- a/qr/Dockerfile
+++ b/qr/Dockerfile
@@ -23,7 +23,8 @@ COPY --chown=node:node . .
 # Use the node user from the image (instead of the root user)
 USER node
 
-ENTRYPOINT [ "tail", "-f", "/dev/null" ]
+RUN npm run start:dev
+# ENTRYPOINT [ "tail", "-f", "/dev/null" ]
 
 ###################
 # BUILD FOR PRODUCTION
